@@ -4,17 +4,135 @@ import com.cool.request.common.bean.components.controller.Controller;
 
 import java.io.File;
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 public class StringUtils {
+    private static final String[] EMPTY_STRING_ARRAY = {};
+
+    private static final String FOLDER_SEPARATOR = "/";
+
+    private static final char FOLDER_SEPARATOR_CHAR = '/';
+
+    private static final String WINDOWS_FOLDER_SEPARATOR = "\\";
+
+    private static final String TOP_PATH = "..";
+
+    private static final String CURRENT_PATH = ".";
+
+    private static final char EXTENSION_SEPARATOR = '.';
+
+    public static String[] tokenizeToStringArray(String str, String delimiters) {
+        return tokenizeToStringArray(str, delimiters, true, true);
+    }
+
+    public static String[] tokenizeToStringArray(String str, String delimiters, boolean trimTokens, boolean ignoreEmptyTokens) {
+
+        if (str == null) {
+            return EMPTY_STRING_ARRAY;
+        }
+
+        StringTokenizer st = new StringTokenizer(str, delimiters);
+        List<String> tokens = new ArrayList<>();
+        while (st.hasMoreTokens()) {
+            String token = st.nextToken();
+            if (trimTokens) {
+                token = token.trim();
+            }
+            if (!ignoreEmptyTokens || token.length() > 0) {
+                tokens.add(token);
+            }
+        }
+        return toStringArray(tokens);
+    }
+
+    public static String replace(String inString, String oldPattern, String newPattern) {
+        if (!hasLength(inString) || !hasLength(oldPattern) || newPattern == null) {
+            return inString;
+        }
+        int index = inString.indexOf(oldPattern);
+        if (index == -1) {
+            // no occurrence -> can return input as-is
+            return inString;
+        }
+
+        int capacity = inString.length();
+        if (newPattern.length() > oldPattern.length()) {
+            capacity += 16;
+        }
+        StringBuilder sb = new StringBuilder(capacity);
+
+        int pos = 0;  // our position in the old string
+        int patLen = oldPattern.length();
+        while (index >= 0) {
+            sb.append(inString, pos, index);
+            sb.append(newPattern);
+            pos = index + patLen;
+            index = inString.indexOf(oldPattern, pos);
+        }
+
+        // append any characters to the right of a match
+        sb.append(inString, pos, inString.length());
+        return sb.toString();
+    }
+
+    public static String[] toStringArray(Collection<String> collection) {
+        return (!CollectionUtils.isEmpty(collection) ? collection.toArray(EMPTY_STRING_ARRAY) : EMPTY_STRING_ARRAY);
+    }
+
+
+    public static String arrayToDelimitedString(Object[] arr, String delim) {
+        if (ObjectUtils.isEmpty(arr)) {
+            return "";
+        }
+        if (arr.length == 1) {
+            return ObjectUtils.nullSafeToString(arr[0]);
+        }
+
+        StringJoiner sj = new StringJoiner(delim);
+        for (Object elem : arr) {
+            sj.add(String.valueOf(elem));
+        }
+        return sj.toString();
+    }
+
+    /**
+     * Convert a {@code String} array into a comma delimited {@code String}
+     * (i.e., CSV).
+     * <p>Useful for {@code toString()} implementations.
+     *
+     * @param arr the array to display (potentially {@code null} or empty)
+     * @return the delimited {@code String}
+     */
+    public static String arrayToCommaDelimitedString(Object[] arr) {
+        return arrayToDelimitedString(arr, ",");
+    }
+
+
+    public static boolean hasText(String str) {
+        return (str != null && !str.isEmpty() && containsText(str));
+    }
+
+    private static boolean containsText(CharSequence str) {
+        int strLen = str.length();
+        for (int i = 0; i < strLen; i++) {
+            if (!Character.isWhitespace(str.charAt(i))) {
+                return true;
+            }
+        }
+        return false;
+    }
+
     public static String joinSingleQuotation(String str) {
         return "'" + str + "'";
+    }
+
+    public static boolean hasLength(String str) {
+        return (str != null && !str.isEmpty());
     }
 
     /**
@@ -134,21 +252,18 @@ public class StringUtils {
      * @return 路径
      */
     public static String removeHostFromUrl(String url) {
-        if (StringUtils.isEmpty(url)) return "";
         try {
-            URI uri = new URI(url);
-            URI newUri = new URI(
-                    null,
-                    null,
-                    null,
-                    0,
-                    uri.getPath(),
-                    uri.getQuery(),
-                    uri.getFragment()
-            );
-
-            return newUri.toString();
-        } catch (URISyntaxException ignored) {
+            StringBuilder stringBuilder = new StringBuilder();
+            URL urlObj = new URL(url);
+            if (urlObj.getPath() != null) {
+                stringBuilder.append(urlObj.getPath());
+            }
+            if (urlObj.getQuery() != null) {
+                stringBuilder.append("?");
+                stringBuilder.append(urlObj.getQuery());
+            }
+            return stringBuilder.toString();
+        } catch (Exception e) {
         }
         return url;
     }
